# github-actions-example

./: CMakeLists.txt  README.md  test.sh
.github/workflows/: main_ci.yml
include/: calculator.h
src/: CMakeLists.txt  calculator.cpp  main.cpp
